<resources>
    <string name="app_name">My Hello World Application</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="e">=</string>
    <string name="d">.</string>
    <string name="b"><![CDATA[<-]]></string>
    <string name="pl">+</string>
    <string name="m">-</string>
    <string name="_7">7</string>
    <string name="s">/</string>
    <string name="p">%</string>
    <string name="ac">AC</string>
</resources>