<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="7">

    <TextView
        android:id="@+id/textVDisplay"
        android:layout_width="match_parent"
        android:layout_height="131dp"
        android:background="@drawable/shape"
        android:gravity="bottom|end"
        android:hint="0"
        android:textSize="50sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="20dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/buttonAC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/ac" />

        <Button
            android:id="@+id/buttonp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/p" />

        <Button
            android:id="@+id/buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/s" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/_7" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/_8" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/_9" />

        <Button
            android:id="@+id/buttonx"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/x" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/_4" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/_5" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/_6" />

        <Button
            android:id="@+id/buttonm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/m" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/_1" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/_2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/_3" />

        <Button
            android:id="@+id/buttonpl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/pl" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/buttonb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/b" />

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/_0" />

        <Button
            android:id="@+id/buttond"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/d" />

        <Button
            android:id="@+id/buttone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/e" />

    </LinearLayout>


</LinearLayout>